--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="css/neighbourhood.css"/>
+    <title>Your Neighbourhood</title>
   </head>
 
   <body>
