add filtering ability
- added some simple text for each marker

- added info text to UI

- added explicit subscription to change marker and list visibility as
  filter text is entered

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
   <body>
     <h3>Your Neighbourhood</h3>
 
+    <input data-bind="textInput: filterText"/>
+
+    <ul data-bind="foreach: neighbourhood.places">
+      <!-- ko if: visible -->
+      <li data-bind="text: info"></li>
+      <!-- /ko -->
+    </ul>
+
     <div id="map" data-bind="favourites: neighbourhood"></div>
 
     <script src="js/knockout-3.4.2.js"></script>
