--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <ul data-bind="foreach: neighbourhood.places">
       <!-- ko if: visible -->
-      <li data-bind="text: info"></li>
+      <li data-bind="text: displayText"></li>
       <!-- /ko -->
     </ul>
 
@@ -22,7 +22,7 @@
     <script src="js/knockout-3.4.2.js"></script>
     <script src="js/neighbourhood.js"></script>
     <script async defer
-	    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVedNVc5hfbdLDUgU4cbaN113ZQNInHHY&callback=initMap">
+	    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChk362NqUIgzyE_9W6_6yBBer9OvM47M0&callback=initMap&libraries=places">
     </script>
   </body>
 </html>
