--- a/index.html
+++ b/index.html
@@ -2,27 +2,42 @@
 <html>
   <head>
     <meta charset="utf-8"/>
-    <link rel="stylesheet" href="css/neighbourhood.css"/>
+    <!-- use viewport width as per device width(phone, tablet, browser) -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylesheet" href="static/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="static/css/neighbourhood.css"/>
+
     <title>Your Neighbourhood</title>
   </head>
 
   <body>
-    <h3>Your Neighbourhood</h3>
+    <div class="container">
+      
+      <h3>Your Neighbourhood</h3>
 
-    <input data-bind="textInput: filterText"/>
+      <div class="row">
+	<div class="col-sm-4">
+	  <input data-bind="textInput: filterText"/>
 
-    <ul data-bind="foreach: neighbourhood.places">
-      <!-- ko if: visible -->
-      <li data-bind="text: displayText"></li>
-      <!-- /ko -->
-    </ul>
+	  <ul class="list-group" data-bind="foreach: neighbourhood.places">
+	    <!-- ko if: visible -->
+	    <li class="list-group-item" data-bind="text: displayText"></li>
+	    <!-- /ko -->
+	  </ul>
+	</div>
 
-    <div id="map" data-bind="favourites: neighbourhood"></div>
+	<div class="col-sm-8">
+	  <div id="map" data-bind="favourites: neighbourhood">
+	  </div>
+	</div>
 
-    <script src="js/knockout-3.4.2.js"></script>
-    <script src="js/neighbourhood.js"></script>
-    <script async defer
-	    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChk362NqUIgzyE_9W6_6yBBer9OvM47M0&callback=initMap&libraries=places">
-    </script>
+	<script src="static/js/knockout-3.4.2.js"></script>
+	<script src="static/js/neighbourhood.js"></script>
+	<script async defer
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChk362NqUIgzyE_9W6_6yBBer9OvM47M0&callback=initMap&libraries=places">
+	</script>
+      </div>
+    </div>
   </body>
 </html>
