--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
 
       <div class="row">
 	<div class="col-sm-4">
-	  <input data-bind="textInput: filterText"/>
+	  <form>
+	    <input class="form-control" type="search"
+		   placeholder="Search..."
+		   data-bind="textInput: filterText"/>
+	  </form>
 
 	  <ul class="list-group" data-bind="foreach: neighbourhood.places">
 	    <!-- ko if: visible -->
