--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
 
   <body>
     <div class="container-fluid">
+      <header>
+	<div class="title">
+	  <h2 class="display-1">Your Neighbourhood</h2>
+	</div>
+      </header>
       
-      <h3>Your Neighbourhood</h3>
-
       <div class="row">
         <div class="col-sm-3">
           <form>
@@ -27,7 +30,7 @@
 
           <div class="list-group" data-bind="foreach: neighbourhood.places">
             <!-- ko if: visible -->
-            <a href="#" class="list-group-item"
+            <a href="#" class="list-group-item places"
                data-bind="html: displayText,
                           css: { active: active() },
                           click: function(data, event) { makeActive(data, $root.neighbourhood) }">
